# service/src/main/java/ru/tusur/prediction/service/api/prediction/dto/result/StudentPredictionResult.java
@@ -1,3 +1,0 @@
-package ru.tusur.prediction.service.api.prediction.dto.result;
-
-public record StudentPredictionResult() {}
