# service/src/main/java/ru/tusur/prediction/service/api/prediction/mapper/StudentPredictionResultDtoMapper.java
@@ -1,0 +1,16 @@
+package ru.tusur.prediction.service.api.prediction.mapper;
+
+import org.mapstruct.Mapper;
+import ru.tusur.prediction.service.api.prediction.dto.result.StudentPredictionResultDto;
+
+/**
+ * Маппер для конвертации в {@link StudentPredictionResultDto}
+ */
+@Mapper(componentModel = "spring")
+public interface StudentPredictionResultDtoMapper {
+
+    /**
+     * Обертка {@link Integer} в {@link StudentPredictionResultDto}
+     */
+    StudentPredictionResultDto map(Integer value);
+}
